--- a/ibuprofen.html
+++ b/ibuprofen.html
@@ -339,7 +339,7 @@ const T = {
       ]},
       ramadan: { title:"Ramadaan iyo soonka", small:"(Ramadan og faste)", items:[
         "Ibuprofen kaniinku wuxuu jebiyaa soonka haddii la qaato maalinta.",
-        "Haddii aad u baahan tahay, ka fikir in qiyaasta loo wareejiyo fiidkii ama <span class='highlight'>cuntada ka hor waaberiga (suhoor)</span> – la tasho dhakhtarka."
+        "Haddii aad u baahan tahay, ka fikir in qiyaasta loo wareejiyo fiidkii ama <span class='highlight'>suxuurta</span> – la tasho dhakhtarka."
       ]},
       food: { title:"Cunto iyo cabitaan", small:"(Mad og drikke)", items:[
         "Had iyo jeer ibuprofen qaado adiga oo wax cunay ama cunno la qaadanaya, si loo ilaaliyo caloosha.",
