--- a/paracetamol.html
+++ b/paracetamol.html
@@ -245,7 +245,7 @@ const T = {
     sec8: [
       "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan daawada marka ay dhaafto taariikhda “EXP”. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
+      "Ha qaadan daawada marka ay dhaafto taariikhda dhicitaanka. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
     ],
 
     footer1: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
@@ -302,7 +302,7 @@ const T = {
     sec8Title: "Opbevaring",
     sec8: [
       "Opbevares utilgængeligt for børn, under 25°C og i original emballage.",
-      "Brug ikke efter “EXP”. Aflever rester på apoteket."
+      "Brug ikke efter udløbsdatoen. Aflever rester på apoteket."
     ],
 
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
@@ -359,7 +359,7 @@ const T = {
     sec8Title: "Storage",
     sec8: [
       "Keep out of reach of children, below 25°C, in the original package.",
-      "Do not use after “EXP”. Return leftovers to the pharmacy."
+      "Do not use after the expiry date. Return leftovers to the pharmacy."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
@@ -416,7 +416,7 @@ const T = {
     sec8Title: "الحفظ",
     sec8: [
       "يحفظ بعيداً عن الأطفال، تحت 25°م وفي العبوة الأصلية.",
-      "لا يستخدم بعد “EXP”. أعد البقايا إلى الصيدلية."
+      "لا يستخدم بعد تاريخ الانتهاء. أعد البقايا إلى الصيدلية."
     ],
 
     footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
@@ -473,7 +473,7 @@ const T = {
     sec8Title: "Saklama",
     sec8: [
       "Çocuklardan uzak, 25°C’nin altında, orijinal ambalajında saklayın.",
-      "“EXP” sonrası kullanmayın. Artanları eczaneye verin."
+      "Son kullanma tarihinden sonra kullanmayın. Artanları eczaneye verin."
     ],
 
     footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
@@ -530,7 +530,7 @@ const T = {
     sec8Title: "محفوظ رکھنا",
     sec8: [
       "بچوں سے دور، 25°C سے کم، اصل پیک میں رکھیں۔",
-      "“EXP” کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"
+      "میعاد ختم ہونے کی تاریخ کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"
     ],
 
     footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
@@ -587,7 +587,7 @@ const T = {
     sec8Title: "نگهداری",
     sec8: [
       "دور از دسترس کودکان، زیر 25°C و در بسته‌بندی اصلی نگهداری شود.",
-      "پس از “EXP” مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."
+      "پس از تاریخ انقضا مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."
     ],
 
     footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
@@ -644,7 +644,7 @@ const T = {
     sec8Title: "نگهداری",
     sec8: [
       "دور از دسترس اطفال، زیر 25°C و در بسته‌بندی اصلی نگهداری شود.",
-      "بعد از “EXP” استفاده نشود. باقی‌مانده را به دواخانه بسپارید."
+      "بعد از تاریخ انقضا استفاده نشود. باقی‌مانده را به دواخانه بسپارید."
     ],
 
     footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
@@ -701,7 +701,7 @@ const T = {
     sec8Title: "ساتنه",
     sec8: [
       "له ماشومانو لرې، تر 25°C لاندې او په اصلي بسته کې وساتئ.",
-      "له “EXP” وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."
+      "له ختمېدو نېټې وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."
     ],
 
     footer1: "د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
@@ -756,13 +756,11 @@ function applyLang(lang){
   document.getElementById("footer1").textContent = d.footer1;
   document.getElementById("footer2").innerHTML = d.footer2;
 
-  // keep language when going back
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
 }
 
-// Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
 
