--- a/naproxen.html
+++ b/naproxen.html
@@ -245,7 +245,7 @@ const T = {
     sec8: [
       "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan daawada marka ay dhaafto taariikhda “EXP”. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
+      "Ha qaadan daawada marka ay dhaafto taariikhda dhicitaanka (expiry date). Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
     ],
 
     footer1: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
@@ -275,13 +275,13 @@ const T = {
     sec3Title: "Bivirkninger",
     sec3: [
       "Mavesmerter, kvalme, hovedpine.",
-      "Mavesår eller blødning kan forekomme – især ved lang tids brug."
+      "Mavesår eller blødning kan forekomme, især ved lang tids brug."
     ],
     sec4Title: "Interaktioner",
     sec4: [
       "Undgå at kombinere med andre NSAID (fx ibuprofen/diclofenac).",
       "Forsigtighed ved blodfortyndende medicin.",
-      "Nogle nyre- og blodtryksmedicin kan øge risiko for nyrepåvirkning."
+      "Nogle nyre- og blodtryksmedicin kan øge risikoen for nyrepåvirkning."
     ],
     sec5Title: "Advarsler",
     sec5: [
@@ -301,7 +301,7 @@ const T = {
     sec8Title: "Opbevaring",
     sec8: [
       "Opbevares utilgængeligt for børn, under 25°C og i original emballage.",
-      "Brug ikke efter “EXP”. Aflever rester på apoteket."
+      "Brug ikke efter udløbsdatoen. Aflever rester på apoteket."
     ],
 
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
@@ -357,7 +357,7 @@ const T = {
     sec8Title: "Storage",
     sec8: [
       "Keep out of reach of children, below 25°C, in the original package.",
-      "Do not use after “EXP”. Return leftovers to the pharmacy."
+      "Do not use after the expiry date. Return leftovers to the pharmacy."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
@@ -382,12 +382,12 @@ const T = {
     sec2Title: "الجرعة",
     sec2: [
       "يحدد الطبيب الجرعة.",
-      "للبالغين غالباً <span class='highlight'>250–500 ملغ</span> <span class='highlight'>مرة إلى مرتين يومياً</span> ويفضل <span class='highlight'>مع الطعام</span>."
+      "للبالغين غالباً <span class='highlight'>250–500 ملغ</span> <span class='highlight'>مرة إلى مرتين يومياً</span>، ويفضل <span class='highlight'>مع الطعام</span>."
     ],
     sec3Title: "الآثار الجانبية",
     sec3: [
       "ألم معدة، غثيان، صداع.",
-      "قد يسبب قرحة أو نزيف معدي خاصة مع الاستخدام الطويل."
+      "قد يسبب قرحة أو نزيفاً معدياً، خاصة مع الاستخدام الطويل."
     ],
     sec4Title: "التداخلات",
     sec4: [
@@ -397,7 +397,7 @@ const T = {
     ],
     sec5Title: "تحذيرات",
     sec5: [
-      "إذا كان لديك قرحة أو نزيف سابق أخبر الطبيب قبل البدء.",
+      "إذا كان لديك قرحة أو نزيف سابق، أخبر الطبيب قبل البدء.",
       "لا تستخدمه لفترة طويلة دون متابعة طبية."
     ],
     sec6Title: "رمضان والصيام",
@@ -413,7 +413,7 @@ const T = {
     sec8Title: "الحفظ",
     sec8: [
       "يحفظ بعيداً عن الأطفال، تحت 25°م وفي العبوة الأصلية.",
-      "لا يستخدم بعد “EXP”. أعد البقايا إلى الصيدلية."
+      "لا يستخدم بعد تاريخ الانتهاء. أعد البقايا إلى الصيدلية."
     ],
 
     footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
@@ -469,7 +469,7 @@ const T = {
     sec8Title: "Saklama",
     sec8: [
       "Çocuklardan uzak, 25°C’nin altında, orijinal ambalajında saklayın.",
-      "“EXP” sonrası kullanmayın. Artanları eczaneye verin."
+      "Son kullanma tarihinden sonra kullanmayın. Artanları eczaneye verin."
     ],
 
     footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
@@ -494,7 +494,7 @@ const T = {
     sec2Title: "خوراک",
     sec2: [
       "خوراک ڈاکٹر طے کرتے ہیں۔",
-      "بالغ: عموماً <span class='highlight'>250–500 mg</span> <span class='highlight'>دن میں 1–2 بار</span> اور بہتر ہے <span class='highlight'>کھانے کے ساتھ</span> لیں۔"
+      "بالغ: عموماً <span class='highlight'>250–500 mg</span> <span class='highlight'>دن میں 1–2 بار</span>، اور بہتر ہے <span class='highlight'>کھانے کے ساتھ</span> لیں۔"
     ],
     sec3Title: "مضر اثرات",
     sec3: [
@@ -525,7 +525,7 @@ const T = {
     sec8Title: "محفوظ رکھنا",
     sec8: [
       "بچوں سے دور، 25°C سے کم، اصل پیک میں رکھیں۔",
-      "“EXP” کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"
+      "میعاد ختم ہونے کی تاریخ کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"
     ],
 
     footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
@@ -581,7 +581,7 @@ const T = {
     sec8Title: "نگهداری",
     sec8: [
       "دور از دسترس کودکان، زیر 25°C و در بسته‌بندی اصلی نگهداری شود.",
-      "پس از “EXP” مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."
+      "پس از تاریخ انقضا مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."
     ],
 
     footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
@@ -606,7 +606,7 @@ const T = {
     sec2Title: "دوز",
     sec2: [
       "دوز را داکتر تعیین می‌کند.",
-      "بزرگسالان: معمولاً <span class='highlight'>250–500 mg</span> <span class='highlight'>۱–۲ بار در روز</span> و بهتر است <span class='highlight'>با غذا</span> گرفته شود."
+      "بزرگسالان: معمولاً <span class='highlight'>250–500 mg</span> <span class='highlight'>۱–۲ بار در روز</span>، و بهتر است <span class='highlight'>با غذا</span> گرفته شود."
     ],
     sec3Title: "عوارض",
     sec3: [
@@ -637,7 +637,7 @@ const T = {
     sec8Title: "نگهداری",
     sec8: [
       "دور از دسترس اطفال، زیر 25°C و در بسته‌بندی اصلی نگهداری شود.",
-      "بعد از “EXP” استفاده نشود. باقی‌مانده را به دواخانه بسپارید."
+      "بعد از تاریخ انقضا استفاده نشود. باقی‌مانده را به دواخانه بسپارید."
     ],
 
     footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
@@ -693,7 +693,7 @@ const T = {
     sec8Title: "ساتنه",
     sec8: [
       "له ماشومانو لرې، تر 25°C لاندې او په اصلي بسته کې وساتئ.",
-      "له “EXP” وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."
+      "له ختمېدو نېټې وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."
     ],
 
     footer1: "د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
